# rust-diesel-bug-2365

./: Cargo.toml  README.md
src/: main.rs
