[package]
name = "rust-diesel-bug-2365"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
rusqlite = "0.23.1" # pick one that's compatible with diesel's dependency constraints
